--- a/index.html
+++ b/index.html
@@ -415,19 +415,20 @@
               <!-- Dashboard -->
               <!-- =================== -->
               <li class="sidebar-item">
-                <a class="sidebar-link has-arrow" href="index.html" aria-expanded="false">
+                <!-- has-arrow -->
+                <a class="sidebar-link" href="index.html" aria-expanded="false">
                   <span>
                     <i class="ti ti-home-2"></i>
                   </span>
                   <span class="hide-menu">Dashboard</span>
                 </a>
-                <ul aria-expanded="false" class="collapse first-level">
-                  <li class="sidebar-item">
+                <!-- <ul aria-expanded="false" class="collapse first-level"> -->
+                  <!-- <li class="sidebar-item">
                     <a href="index.html" class="sidebar-link">
                       <i class="ti ti-aperture"></i>
                       <span class="hide-menu">Overview</span>
                     </a>
-                  </li>
+                  </li> -->
                   <!-- <li class="sidebar-item">
                     <a href="index2.html" class="sidebar-link">
                       <i class="ti ti-shopping-cart"></i>
@@ -458,7 +459,7 @@
                       <span class="hide-menu">Music</span>
                     </a>
                   </li> -->
-                </ul>
+                <!-- </ul> -->
               </li>
               <!-- ============================= -->
               <!-- Apps -->
@@ -639,20 +640,21 @@
               <!-- Forms -->
               <!-- =================== -->
               <li class="sidebar-item">
-                <a class="sidebar-link two-column has-arrow" href="#" aria-expanded="false">
+                <!-- has-arrow -->
+                <a class="sidebar-link two-column" href="#" aria-expanded="false">
                   <span class="rounded-3">
                     <i class="ti ti-file-text"></i>
                   </span>
                   <span class="hide-menu">Candidates</span>
                 </a>
-                <ul aria-expanded="false" class="collapse first-level">
+                <!-- <ul aria-expanded="false" class="collapse first-level"> -->
                   <!-- form elements -->
-                  <li class="sidebar-item">
+                  <!-- <li class="sidebar-item">
                     <a href="form-inputs.html" class="sidebar-link">
                       <i class="ti ti-circle"></i>
                       <span class="hide-menu">Overview</span>
                     </a>
-                  </li>
+                  </li> -->
                   <!-- <li class="sidebar-item">
                     <a href="form-input-groups.html" class="sidebar-link">
                       <i class="ti ti-circle"></i>
@@ -752,33 +754,34 @@
                       <span class="hide-menu">Quill Editor</span>
                     </a>
                   </li> -->
-                </ul>
+                <!-- </ul> -->
               </li>
               <!-- ============================= -->
               <!-- Tables -->
               <!-- ============================= -->
               <li class="nav-small-cap">
                 <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-                <span class="hide-menu">Tables</span>
+                <span class="hide-menu">Locations</span>
               </li>
               <!-- =================== -->
               <!-- Bootstrap Table -->
               <!-- =================== -->
               <li class="sidebar-item">
-                <a class="sidebar-link has-arrow" href="#" aria-expanded="false">
+                <!-- has-arrow -->
+                <a class="sidebar-link" href="#" aria-expanded="false">
                   <span class="rounded-3">
                     <i class="ti ti-layout-sidebar"></i>
                   </span>
-                  <span class="hide-menu">Tables</span>
+                  <span class="hide-menu">Locations</span>
                 </a>
-                <ul aria-expanded="false" class="collapse first-level">
+                <!-- <ul aria-expanded="false" class="collapse first-level">
                   <li class="sidebar-item">
                     <a href="table-basic.html" class="sidebar-link">
                       <i class="ti ti-circle"></i>
-                      <span class="hide-menu">Basic Table</span>
+                      <span class="hide-menu">Overview</span>
                     </a>
-                  </li>
-                  <li class="sidebar-item">
+                  </li> -->
+                  <!-- <li class="sidebar-item">
                     <a href="table-dark-basic.html" class="sidebar-link">
                       <i class="ti ti-circle"></i>
                       <span class="hide-menu">Dark Basic Table</span>
@@ -813,34 +816,35 @@
                       <i class="ti ti-circle"></i>
                       <span class="hide-menu">Advanced Initialisation</span>
                     </a>
-                  </li>
-                </ul>
+                  </li> -->
+                <!-- </ul> -->
               </li>
               <!-- ============================= -->
               <!-- Charts -->
               <!-- ============================= -->
               <li class="nav-small-cap">
                 <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-                <span class="hide-menu">Charts</span>
+                <span class="hide-menu">Parties</span>
               </li>
               <!-- =================== -->
               <!-- Apex Chart -->
               <!-- =================== -->
               <li class="sidebar-item">
-                <a class="sidebar-link has-arrow" href="#" aria-expanded="false">
+                <!-- has-arrow -->
+                <a class="sidebar-link" href="#" aria-expanded="false">
                   <span class="rounded-3">
                     <i class="ti ti-chart-pie"></i>
                   </span>
-                  <span class="hide-menu">Apex Charts</span>
+                  <span class="hide-menu">Parties</span>
                 </a>
-                <ul aria-expanded="false" class="collapse first-level">
+                <!-- <ul aria-expanded="false" class="collapse first-level">
                   <li class="sidebar-item">
                     <a href="chart-apex-line.html" class="sidebar-link">
                       <i class="ti ti-circle"></i>
-                      <span class="hide-menu">Line Chart</span>
+                      <span class="hide-menu">Overview</span>
                     </a>
-                  </li>
-                  <li class="sidebar-item">
+                  </li> -->
+                  <!-- <li class="sidebar-item">
                     <a href="chart-apex-area.html" class="sidebar-link">
                       <i class="ti ti-circle"></i>
                       <span class="hide-menu">Area Chart</span>
@@ -869,15 +873,15 @@
                       <i class="ti ti-circle"></i>
                       <span class="hide-menu">Radar Chart</span>
                     </a>
-                  </li>
-                </ul>
+                  </li> -->
+                <!-- </ul> -->
               </li>
               <!-- ============================= -->
               <!-- Icons -->
               <!-- ============================= -->
               <li class="nav-small-cap">
                 <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-                <span class="hide-menu">Icons</span>
+                <span class="hide-menu">Survey</span>
               </li>
               <!-- =================== -->
               <!-- Tabler Icon -->
@@ -887,7 +891,7 @@
                   <span class="rounded-3">
                     <i class="ti ti-archive"></i>
                   </span>
-                  <span class="hide-menu">Tabler Icon</span>
+                  <span class="hide-menu">Survey</span>
                 </a>
               </li>
             </ul>
@@ -994,12 +998,16 @@
               </div>
             </div>
           </div> -->
-          <!--  Row 1 -->
+
+
+
+
+          <!--  Dashboard -->
           <div class="row">
             <div class="col-lg-12 d-flex align-items-strech">
               <div class="card w-100">
                 <div class="card-body">
-                  <div class="d-sm-flex d-block align-items-center justify-content-between mb-9">
+                  <!-- <div class="d-sm-flex d-block align-items-center justify-content-between mb-9">
                     <div class="mb-3 mb-sm-0">
                       <h5 class="card-title fw-semibold">Revenue Updates</h5>
                       <p class="card-subtitle mb-0">Overview of Profit</p>
@@ -1009,9 +1017,17 @@
                         <option value="1">All</option>
                       </select>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="row align-items-center">
                     <div class="col-lg-12 col-md-12">
+
+                      <iframe
+                          src="https://monitor.alanforpresident.com/public/dashboard/8c2a0390-ebd7-4243-b42c-0a922ff3d5b6"
+                          frameborder="0"
+                          width="800"
+                          height="600"
+                          allowtransparency
+                      ></iframe>
 
                     </div>
                   </div>
@@ -1019,6 +1035,13 @@
               </div>
             </div>
           </div>
+
+
+
+
+
+
+
         </div>
       </div>
       <div class="dark-transparent sidebartoggler"></div>
